# Pythons

./: East.xlsx  North.xlsx  South.xlsx  West.xlsx  cars.csv  combined.xlsx  combineexcel.py  datacampdict.py  datacampexcel.py  datacampfunctions.py  datacamphhtprequest.py  datacampintimpdata.py  datacampiteral.py  datacamppandas.py  datacampplots.py  datacamptwitterapi.py  datagyautomateexcel.py  datagypythonexcel01.py  excelpython.py  exercise_1_ekpa.py  exercise_2_ekpa.py  main.py  mathesisabs.py  mathesisdataweb.py  mathesisdatechoices.py  mathesisfiles.py  mathesisfor.py  mathesisfunctions.py  mathesisguessnum.py  mathesislists.py  mathesisos.py  mathesisregularexp.py  mathesistest2.py  mathesistest3.py  mathesisvariables.py  nathesisifcondition.py  nohup.out  pandasplot.py  pyproject.toml  quarterly_sales.xlsx  (+14 more)
