[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Costas Kounadis <compkos@gmail.com>"]
description = ""
name = "pythons"
version = "0.1.0"
[tool.poetry.dependencies]
numpy = "^1.18"
python = "^3.7"
matplotlib = "^3.2"
pandas = "^1.0"
xlrd = "^1.2"
openpyxl = "^3.0"
seaborn = "^0.10.1"
[tool.poetry.dev-dependencies]
