[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Costas Kounadis <compkos@gmail.com>"]
description = ""
name = "pythons"
version = "0.1.0"
[tool.poetry.dependencies]
matplotlib = "^3.2"
numpy = "^1.18"
openpyxl = "^3.0"
pandas = "^1.0"
python = "^3.8"
seaborn = "^0.10.1"
xlrd = "^1.2"
[tool.poetry.dev-dependencies]
